Lots of small tweaks to fix design/contrast issues

--- a/assets/less/appeals/nov24.less
+++ b/assets/less/appeals/nov24.less
@@ -4,6 +4,9 @@
 .page-appeal-nov24 {
   --bg: #FEFFFF;
 
+  // Override our breakpoint here so that it breaks just before hitting the screenshot logo
+  @md: 54.375rem; // 870px
+
   // Prefer webp over the jpeg
   --bg-img: url('/media/img/thunderbird/appeal/nov24/background-image-high-res.jpeg');
   --bg-img-set: image-set(var(--bg-img) type('image/jpeg'),
@@ -12,9 +15,16 @@
   body {
     background-image: var(--bg-img);
     background-image: var(--bg-img-set);
-    background-size: cover;
     background-position: center top;
     background-repeat: no-repeat;
+    background-size: 80.0rem; // 1280px
+    background-color: #1E467F;
+  }
+
+  // Prevent overflow from feature elements
+  #main-content {
+    max-width: 100%;
+    overflow: hidden;
   }
 
   h1, h1 span {
@@ -29,7 +39,7 @@
     font-size: 5.75rem;
     font-weight: 600;
 
-    @media (max-width: @lg) {
+    @media (max-width: @md) {
       font-size: 3rem;
     }
   }
@@ -39,7 +49,7 @@
     font-size: 2.0rem;
     font-weight: 500;
 
-    @media (max-width: @lg) {
+    @media (max-width: @md) {
       font-size: 1rem;
     }
   }
@@ -49,7 +59,7 @@
     padding-bottom: 0;
     overflow: visible;
 
-    @media (max-width: @lg) {
+    @media (max-width: @md) {
       padding: 0;
     }
   }
@@ -69,7 +79,7 @@
     right: 0.6rem;
     position: relative;
 
-    @media (max-width: @lg) {
+    @media (max-width: @md) {
       margin-top: 7.5rem;
     }
   }
@@ -99,14 +109,16 @@
     }
 
     // Override the section-text mobile settings
-    @media (max-width: @lg) {
+    @media (max-width: @md) {
       max-width: 18rem;
       padding: 1.5rem 1.5rem !important;
+      margin-left: auto;
+      margin-right: auto;
     }
   }
 
   .section-text {
-    @media (max-width: @lg) {
+    @media (max-width: @md) {
       padding: 0.5rem;
       max-inline-size: 100%;
     }
@@ -140,7 +152,7 @@
     height: 76.875rem;
     background-color: var(--bg);
 
-    @media (max-width: @lg) {
+    @media (max-width: @md) {
       height: calc(76.875rem * 2);
     }
   }
@@ -330,7 +342,7 @@
       }
     }
 
-    @media (max-width: @lg) {
+    @media (max-width: @md) {
       margin-top: -2rem;
       gap: 0;
 
@@ -544,6 +556,7 @@
     border-top: 1px solid var(--color-blue-40);
   }
 
+  // Donation button overrides
   .donate-banner {
     border-radius: 0.75rem;
     --background-left: linear-gradient(180deg, #DC2626 20.11%, #761414 100%);
@@ -551,30 +564,37 @@
     box-shadow: 0px 0px 10px 0px #0000001A;
     border: 1px solid var(--critical-pressed, #7F1D1D);
     color: #7F1D1D;
-
+    font-family: 'Metropolis', sans-serif;
     margin-bottom: 2rem;
 
-    /*
-    @media (max-width: @lg) {
-      &::after {
-        top: -306px;
-        left: -208px;
-        transform: rotate(70deg);
-        transition: transform 0.3s ease-in-out;
-      }
 
-      #decoration {
-        transform: rotate(-20deg);
-      }
-    }
-     */
-    @media (max-width: @lg) {
+    @media (max-width: @md) {
       height: 6.25rem;
+
+      #hover-hearts {
+        color: #FFE8E6;
+        opacity: 0.5;
+      }
 
       #donate-banner-right {
         position: absolute;
         right: 0;
         bottom: -.5rem;
+        font-size: ~"clamp(1.25rem, 0.6429rem + 1.7857vw, 1.5rem)";
+        // Up the weight by 100
+        font-weight: 400;
+
+        b {
+          font-weight: 500;
+          font-size: ~"clamp(1.25rem, 1.0714rem + 0.8929vw, 1.5rem)";
+        }
+      }
+    }
+
+    @media (max-width: @xs) {
+      // Deepen the font-colour to help with contrast issues
+      #donate-banner-right {
+        color: var(--txt);
       }
     }
   }
