--- a/assets/less/updates-style.less
+++ b/assets/less/updates-style.less
@@ -38,8 +38,7 @@ main {
   position: relative;
   margin-top: auto;
   margin-bottom: 0;
-
-  min-height: 8rem;
+  min-height: 10rem;
   display: flex;
 
   .mzla {
